hphp/hack/test/typecheck/nameof/parsing/nameof_upcast.php
<?hh

class C {
  public static function f(): void {
    nameof C upcast string; // T171578360
  }
}
